<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/facebook"
        android:icon="@drawable/facebooklogo"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/facebook">
    </item>
    <item
        android:id="@+id/imagegrid"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/flavors">
    </item>
    <item
        android:id="@+id/about"
        android:icon="@drawable/mapmarker"
        android:orderInCategory="3"
        android:showAsAction="always"
        android:title="@string/about">
    </item>
    <item
        android:id="@+id/website"
        android:orderInCategory="4"
        android:showAsAction="ifRoom"
        android:title="@string/website">
    </item>
    
    <item
        android:id="@+id/contact"
        android:title="@string/contact"
        android:orderInCategory="5"
        android:showAsAction="ifRoom">
    </item>
    
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="6"
        android:showAsAction="never"
        android:title="@string/refresh"/>   
        <item
        android:id="@+id/exit"
        android:title="@string/exit"
        android:orderInCategory="7"
        android:showAsAction="ifRoom">
    </item>
    
</menu>